Value Range: Add range op for builtin isinf

The builtin isinf is not folded at front end if the corresponding optab
exists.  So the range op for isinf is needed for value range analysis.
This patch adds range op for builtin isinf.

gcc/
	PR target/114678
	* gimple-range-op.cc (class cfn_isinf): New.
	(op_cfn_isinf): New variables.
	(gimple_range_op_handler::maybe_builtin_call): Handle
	CASE_FLT_FN (BUILT_IN_ISINF).

gcc/testsuite/
	PR target/114678
	* gcc.dg/tree-ssa/range-isinf.c: New test.
	* gcc.dg/tree-ssa/range-sincos.c: Remove xfail for s390.
	* gcc.dg/tree-ssa/vrp-float-abs-1.c: Likewise.